# team-a-python

./: README.md  pyproject.toml
.github/workflows/: ci-python.yml
tests/: test_main.py
